Fix: prevent copyright notice from overlapping with table of employees

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -27,11 +27,8 @@ a:hover {
 }
 
 .copyright {
-  bottom: 0;
   font-size: small;
-  left: 0;
-  position: absolute;
-  right: 0;
+  margin-top: 30vh;
 }
 
 @media (max-width: 992px) {
